feature: posts list component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,21 @@ body {
 
   padding: 3.125rem;
 }
+
+/* 
+  hide except for screen readers
+  from Bootstrap:
+  https://github.com/twbs/bootstrap/blob/v5.2.3/dist/css/bootstrap.css
+*/
+.visually-hidden,
+.visually-hidden-focusable:not(:focus):not(:focus-within) {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
+}
