fix: general styling and tweaks

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,10 @@ body {
   width: 100%;
 }
 
+body {
+  font-family: var(--roboto-font);
+}
+
 .content {
   display: flex;
   flex-direction: column;
