fix: minor tweaks and styling fixes

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -22,6 +22,12 @@
 .navmenu a {
   color: white;
   text-transform: uppercase;
+  text-decoration: none;
+}
+
+.navmenu .activeLink {
+  font-weight: 700;
+  text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 0.5rem;
   text-decoration-color: #c32aff;
